"trying to run tests"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/client/bin/StompWCIClient",
-            "args": [],
+            "args": [
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
