The job is practically done, there are some todos left though

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,24 +3,18 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch with Arguments Prompt",
+            "name": "StompServer",
             "request": "launch",
-            "mainClass": "",
+            "mainClass": "bgu.spl.net.impl.stomp.StompServer",
+            "projectName": "server",
+            "preLaunchTask": "mvn compile",
             "args": [
                 "7777",
                 "tpc"
             ]
         },
         {
-            "type": "java",
-            "name": "Launch StompServer",
-            "request": "launch",
-            "mainClass": "bgu.spl.net.impl.stomp.StompServer",
-            "projectName": "server",
-            "preLaunchTask": "mvn compile"
-        },
-        {
-            "name": "(gdb) Launch stomp client",
+            "name": "StompClient",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/client/bin/StompWCIClient",
@@ -71,64 +65,6 @@
                 }
             ],
             "preLaunchTask": "make EchoClient"
-        },
-        {
-            "type": "java",
-            "name": "Launch Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "name": "C/C++: gcc build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: gcc build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
-        },
-        {
-            "name": "C/C++: g++ build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: g++ build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
